--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Popular Movies 1</string>
     <string name="teststring">This is where the movie posters will go</string>
+    <string name="error_message">There was an error.</string>
 </resources>
