--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Popular Movies 1</string>
-    <string name="teststring">This is where the movie posters will go</string>
     <string name="error_message">There was an error.</string>
+    <string name="sort_popular">Sort by Popularity</string>
+    <string name="sort_rating">Sort by Rating</string>
 </resources>
