--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="sort_popular">Sort by Popularity</string>
     <string name="sort_rating">Sort by Rating</string>
     <string name="title_activity_movie_detail">Movie Detail</string>
+    <string name="movie_poster_content_desc">Movie Poster</string>
 </resources>
