--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Popular Movies</string>
-    <string name="error_message">There was an error retrieving movie data.  Please make sure you are connected to a network.</string>
+    <string name="error_message">Unable to fetch movie data.  Please make sure you are connected to a network.</string>
     <string name="sort_default">popular</string>
     <string name="sortvalue_popular">popular</string>
     <string name="sortvalue_rating">top_rated</string>
