more database work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="notrailers">No trailers available.</string>
     <string name="trailers">Trailers</string>
     <string name="reviews">Reviews</string>
+    <string name="favorite">Favorite</string>
+    <string name="add_to_favorites">Add to \nFavorites</string>
+    <string name="remove_from_favorites">Remove from \nFavorites</string>
 </resources>
