--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="favorite">Favorite</string>
     <string name="add_to_favorites">Add to \nFavorites</string>
     <string name="remove_from_favorites">Remove from \nFavorites</string>
+    <string name="show_only_favorites">Show Only Favorites</string>
 </resources>
